--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,20 +1,28 @@
-<nav class="navigation" role="navigation">
+<div class="container">
+<nav class="navbar navbar-light" role="navigation">
   {% assign default_paths = site.pages | map: "path" %}
   {% assign page_paths = site.navigation_pages | default: default_paths %}
-  <a class="navigation__branding" href="{{ "/" | relative_url }}">
-    <span class="navigation__logo"><img src="{{ "/assets/images/icon.png" | relative_url }}" class="navigation__logo-img" alt=""></span>
-    <span class="navigation__title">{{ site.title | escape }}</span>
-  </a>
-  <div class="navigation__links">
-    {% if page_paths %}
+        <a class="navbar-brand" href="{{ "/" | relative_url }}">
+          <img src="{{ "/assets/images/icon.png" | relative_url }}"  width="30" height="30" class="d-inline-block align-top" alt="">
+          {{ site.title | escape }}
+        </a>
+        <div class="" id="navbarNav">
+          <ul class="list-inline">
+            {% if page_paths %}
       {% for path in page_paths %}
         {% assign my_page = site.pages | where: "path", path | first %}
         {% if my_page.title %}
           {% unless my_page.url contains site.ampdir %}
-            <a class="navigation__link{% if my_page.url == page.url %} navigation__link--active{% endif %}" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+          <li class="list-inline-item nav-item {% if my_page.url == page.url %}active{% endif %}">
+            <a class="nav-link text-dark" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }} </a>
+          </li>
           {% endunless %}
         {% endif %}
       {% endfor %}
     {% endif %}
-  </div>
+          </ul>
+        </div>
 </nav>
+
+
+</div>
