added google tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,15 @@
 
 <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 <link href="https://fonts.googleapis.com/css?family=Heebo:900" rel="stylesheet">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-577115622"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-577115622');
+</script>
 
 {% seo %}
 
